--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,19 @@
 #server.port=8081
+# 热部署生效
+spring.devtools.restart.enabled=true
+# 设置重启目录
+spring.devtools.restart.additional-paths=src/main/java
+# 设置 classpath 目录下的 WEB-INF 文件夹内容修改不重启
+spring.devtools.restart.exclude=static/**
+
 spring.servlet.multipart.max-file-size=10MB
-
 spring.web.resources.static-locations=/upload/
-
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
+#配置数据库相关信息
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://localhost:3306/zs_exam?serverTimezone=GMT&useSSL=false
-
+spring.datasource.url=jdbc:mysql://localhost:3306/exam_pro?serverTimezone=GMT&useSSL=false
 spring.datasource.username=root
-
-spring.datasource.password=111111
-
+spring.datasource.password=123456
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
