feat:新增swagger-ui接口文档

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/exam_pro?serverTimezone=GMT&us
 spring.datasource.username=root
 spring.datasource.password=111111
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+# 启用Swagger
+springfox.documentation.swagger-ui.enabled=true
+# 设置API文档的URL路径
+springfox.documentation.swagger-ui.path=/swagger-ui.html
